added play button interface to single playlist pages and altered styles a bit

--- a/playlists/acoustic-dream/index.html
+++ b/playlists/acoustic-dream/index.html
@@ -31,18 +31,27 @@
       <h1 class="h2 inverse shadow">Acoustic Dream</h1>
     </div>
 
-    <h2 class="h4">Down To Earth</h2>
 
-    <div class="wrapper single-playlist-wrapper wrapper-col">
 
-      <img src="../../playlists/acoustic-dream.png">
-      <p>Filled with a calm, down-to-earth welcoming ambience, Acoustic Dream is a blend of soft acoustic pop, modern folk and singer-songwriting.<br><br>The sound of an artist eager to tell heartfelt stories through the guitar. With hushed intimacy and soulful performances, this channel is a perfect fit for people over 30 browsing for books while enjoying a moccachino at their favorite coffee place.</p>
+    <div class="wrapper wrapper-col single-playlist-section">
+        <h2 class="h4">Down To Earth</h2>
+        <p class="lead">Filled with a calm, down-to-earth welcoming ambience, Acoustic Dream is a blend of soft acoustic pop, modern folk and singer-songwriting.</p>
+        <figure class="card play-card on-light on-white">
+            <img src="../../playlists/acoustic-dream.png" class="single-playlist-img">
+            <figcaption>
+              <div class="playbutton play"></div>
+              <p class="sample hidden">play sample</p>
+            </figcaption>
+        </figure>
+        <p>The sound of an artist eager to tell heartfelt stories through the guitar. With hushed intimacy and soulful performances, this channel is a perfect fit for people over 30 browsing for books while enjoying a moccachino at their favorite coffee place.</p>
       
       <p class="h5">
         
       </p>
       <div style="background-color: " class="lyric-filter">
+        <a href="#">
         <p></p>
+        </a>
       </div>
       <div style="height: 3rem"></div>
       <div class="row space-around">
@@ -50,8 +59,8 @@
         <a href="../../playlists/" class="button btn-stack">All</a>
         <a href="../../playlists/smooth-lounge/" class="button btn-stack">Next</a>
       </div>
-
     </div>
+
 
 
 
@@ -71,6 +80,10 @@
   <p>
       @2019 Play More Music International Inc.
   </p>
+  <div class="social-links">
+    <i class="fab fa-2x fa-facebook-square social-icon"></i>
+    <i class="fab fa-2x fa-linkedin social-icon"></i>
+  </div>
 </footer>
 
 
