--- a/playlists/index.html
+++ b/playlists/index.html
@@ -29,7 +29,7 @@
 <h1>Playlists</h1>
 
 <section class="wrapper">
-  <p class="lead text-center">View our comprehensive selection of legal business music, from starter playlists through to premium licensed music for your business. (or equally SEO friendly description here, not too long, the user shouldn&#39;t have to read too much here.) This can also be the meta description for SEO, or doesn&#39;t have to be.</p>
+  <p class="lead text-center">View our comprehensive selection of legal business music, from starter playlists through to premium licensed music for your business. (SEO friendly description here, not too long, the user shouldn&#39;t have to read too much here.) This can also be the meta description for SEO, or doesn&#39;t have to be.</p>
 <ul class="card-array">
       
           <li class="card-instance">
@@ -249,6 +249,10 @@
   <p>
       @2019 Play More Music International Inc.
   </p>
+  <div class="social-links">
+    <i class="fab fa-2x fa-facebook-square social-icon"></i>
+    <i class="fab fa-2x fa-linkedin social-icon"></i>
+  </div>
 </footer>
 
 
