--- a/playlists/indie-days/index.html
+++ b/playlists/indie-days/index.html
@@ -31,18 +31,27 @@
       <h1 class="h2 inverse shadow">Indie Days</h1>
     </div>
 
-    <h2 class="h4">Stylish and Edgy</h2>
 
-    <div class="wrapper single-playlist-wrapper wrapper-col">
 
-      <img src="../../playlists/indie-days.png">
-      <p>A stylish and edgy channel for trendsetters and unique spirited souls, built on a blend of indie pop, dance, electronica, nu disco and neo soul.<br><br>The future, today! Drawing inspiration from cities such as Paris, Tokyo and LA, these select sounds ooze avant-garde. Covering several genres such as indie pop,  electronica and soft house, the songs are no short on character yet maintain an intensity level matching the latest interior design and perfect t-shirts.</p>
+    <div class="wrapper wrapper-col single-playlist-section">
+        <h2 class="h4">Stylish and Edgy</h2>
+        <p class="lead">A stylish and edgy channel for trendsetters and unique spirited souls, built on a blend of indie pop, dance, electronica, nu disco and neo soul.</p>
+        <figure class="card play-card on-light on-white">
+            <img src="../../playlists/indie-days.png" class="single-playlist-img">
+            <figcaption>
+              <div class="playbutton play"></div>
+              <p class="sample hidden">play sample</p>
+            </figcaption>
+        </figure>
+        <p>The future, today! Drawing inspiration from cities such as Paris, Tokyo and LA, these select sounds ooze avant-garde. Covering several genres such as indie pop,  electronica and soft house, the songs are no short on character yet maintain an intensity level matching the latest interior design and perfect t-shirts.</p>
       
       <p class="h5">
         
       </p>
       <div style="background-color: " class="lyric-filter">
+        <a href="#">
         <p></p>
+        </a>
       </div>
       <div style="height: 3rem"></div>
       <div class="row space-around">
@@ -50,8 +59,8 @@
         <a href="../../playlists/" class="button btn-stack">All</a>
         <a href="../../playlists/jazz-classics/" class="button btn-stack">Next</a>
       </div>
-
     </div>
+
 
 
 
@@ -71,6 +80,10 @@
   <p>
       @2019 Play More Music International Inc.
   </p>
+  <div class="social-links">
+    <i class="fab fa-2x fa-facebook-square social-icon"></i>
+    <i class="fab fa-2x fa-linkedin social-icon"></i>
+  </div>
 </footer>
 
 
