--- a/playlists/mass-appeal/index.html
+++ b/playlists/mass-appeal/index.html
@@ -31,18 +31,27 @@
       <h1 class="h2 inverse shadow">Mass Appeal</h1>
     </div>
 
-    <h2 class="h4">Top 40</h2>
 
-    <div class="wrapper single-playlist-wrapper wrapper-col">
 
-      <img src="../../playlists/mass-appeal.png">
-      <p>If it’s new and now, it&#39;s on Mass Appeal. It features the most listened to, most downloaded, most wanted songs in this playlist full of back-to-back hits. Freshly picked chart-toppers delivered hot from the studios and stages by today’s pop artists.<br><br>optional</p>
-      <p class="artist-list">Includes Artists: Sam Smith, Mark Ronson, Ed Sheeran, Nick Jonas, Maroon 5, Fall Out Boy, Kelly Clarkson, Hozier, Meghan Trainor</p>
+    <div class="wrapper wrapper-col single-playlist-section">
+        <h2 class="h4">Top 40</h2>
+        <p class="lead">If it’s new and now, it&#39;s on Mass Appeal. It features the most listened to, most downloaded, most wanted songs in this playlist full of back-to-back hits. Freshly picked chart-toppers delivered hot from the studios and stages by today’s pop artists.</p>
+        <figure class="card play-card on-light on-white">
+            <img src="../../playlists/mass-appeal.png" class="single-playlist-img">
+            <figcaption>
+              <div class="playbutton play"></div>
+              <p class="sample hidden">play sample</p>
+            </figcaption>
+        </figure>
+        <p>optional description, optional description,optional description, Curabitur ut cursus.</p>
+      <p class="artist-list h6">Includes Artists: Sam Smith, Mark Ronson, Ed Sheeran, Nick Jonas, Maroon 5, Fall Out Boy, Kelly Clarkson, Hozier, Meghan Trainor</p>
       <p class="h5">
         Plan: Premium 
       </p>
       <div style="background-color: orange" class="lyric-filter">
+        <a href="#">
         <p>Lyrics Filter: orange</p>
+        </a>
       </div>
       <div style="height: 3rem"></div>
       <div class="row space-around">
@@ -50,8 +59,8 @@
         <a href="../../playlists/" class="button btn-stack">All</a>
         <a href="../../playlists/my-favorite-hits/" class="button btn-stack">Next</a>
       </div>
-
     </div>
+
 
 
 
@@ -71,6 +80,10 @@
   <p>
       @2019 Play More Music International Inc.
   </p>
+  <div class="social-links">
+    <i class="fab fa-2x fa-facebook-square social-icon"></i>
+    <i class="fab fa-2x fa-linkedin social-icon"></i>
+  </div>
 </footer>
 
 
