--- a/playlists/mega-jamz/index.html
+++ b/playlists/mega-jamz/index.html
@@ -31,18 +31,27 @@
       <h1 class="h2 inverse shadow">Mega Jamz</h1>
     </div>
 
-    <h2 class="h4">Top 40 and Urban Contemporary</h2>
 
-    <div class="wrapper single-playlist-wrapper wrapper-col">
 
-      <img src="../../playlists/mega-jamz.png">
-      <p>This is where pop meets the street beat. Today&#39;s biggest pop hits along with today&#39;s urban hits, combined for a power playlist of hits for those needing an urban accent to their retail environment.<br><br>optional</p>
-      <p class="artist-list">Includes Artists: The Weeknd, Flo Rida, Kanye West, Rihanna</p>
+    <div class="wrapper wrapper-col single-playlist-section">
+        <h2 class="h4">Top 40 and Urban Contemporary</h2>
+        <p class="lead">This is where pop meets the street beat. Today&#39;s biggest pop hits along with today&#39;s urban hits, combined for a power playlist of hits for those needing an urban accent to their retail environment.</p>
+        <figure class="card play-card on-light on-white">
+            <img src="../../playlists/mega-jamz.png" class="single-playlist-img">
+            <figcaption>
+              <div class="playbutton play"></div>
+              <p class="sample hidden">play sample</p>
+            </figcaption>
+        </figure>
+        <p>optional description, optional description,optional description, Curabitur ut cursus.</p>
+      <p class="artist-list h6">Includes Artists: The Weeknd, Flo Rida, Kanye West, Rihanna</p>
       <p class="h5">
         Plan: Premium 
       </p>
       <div style="background-color: orange" class="lyric-filter">
+        <a href="#">
         <p>Lyrics Filter: orange</p>
+        </a>
       </div>
       <div style="height: 3rem"></div>
       <div class="row space-around">
@@ -50,8 +59,8 @@
         <a href="../../playlists/" class="button btn-stack">All</a>
         <a href="../../playlists/top-beats/" class="button btn-stack">Next</a>
       </div>
-
     </div>
+
 
 
 
@@ -71,6 +80,10 @@
   <p>
       @2019 Play More Music International Inc.
   </p>
+  <div class="social-links">
+    <i class="fab fa-2x fa-facebook-square social-icon"></i>
+    <i class="fab fa-2x fa-linkedin social-icon"></i>
+  </div>
 </footer>
 
 
