--- a/playlists/my-favorite-hits/index.html
+++ b/playlists/my-favorite-hits/index.html
@@ -31,18 +31,27 @@
       <h1 class="h2 inverse shadow">My Favorite Hits</h1>
     </div>
 
-    <h2 class="h4">Adult Contemporary</h2>
 
-    <div class="wrapper single-playlist-wrapper wrapper-col">
 
-      <img src="../../playlists/my-favorite-hits.png">
-      <p>My Favorite Hits is an upbeat mix of today’s hit music for adults, plus songs from the 80’s and 90’s that sound fresh and relevant. This playlist is audience-tested to ensure adults 25&#43; will enjoy every song. Our most popular playlist!<br><br>optional</p>
-      <p class="artist-list">Includes Artists: Taylor Swift, John Legend, Kelly Clarkson, Train, Katy Perry</p>
+    <div class="wrapper wrapper-col single-playlist-section">
+        <h2 class="h4">Adult Contemporary</h2>
+        <p class="lead">My Favorite Hits is an upbeat mix of today’s hit music for adults, plus songs from the 80’s and 90’s that sound fresh and relevant. This playlist is audience-tested to ensure adults 25&#43; will enjoy every song. Our most popular playlist!</p>
+        <figure class="card play-card on-light on-white">
+            <img src="../../playlists/my-favorite-hits.png" class="single-playlist-img">
+            <figcaption>
+              <div class="playbutton play"></div>
+              <p class="sample hidden">play sample</p>
+            </figcaption>
+        </figure>
+        <p>optional description, optional description,optional description, Curabitur ut cursus.</p>
+      <p class="artist-list h6">Includes Artists: Taylor Swift, John Legend, Kelly Clarkson, Train, Katy Perry</p>
       <p class="h5">
         Plan: Premium 
       </p>
       <div style="background-color: yellow" class="lyric-filter">
+        <a href="#">
         <p>Lyrics Filter: yellow</p>
+        </a>
       </div>
       <div style="height: 3rem"></div>
       <div class="row space-around">
@@ -50,8 +59,8 @@
         <a href="../../playlists/" class="button btn-stack">All</a>
         <a href="../../playlists/ritmo-caliente/" class="button btn-stack">Next</a>
       </div>
-
     </div>
+
 
 
 
@@ -71,6 +80,10 @@
   <p>
       @2019 Play More Music International Inc.
   </p>
+  <div class="social-links">
+    <i class="fab fa-2x fa-facebook-square social-icon"></i>
+    <i class="fab fa-2x fa-linkedin social-icon"></i>
+  </div>
 </footer>
 
 
