--- a/playlists/smooth-lounge/index.html
+++ b/playlists/smooth-lounge/index.html
@@ -31,18 +31,27 @@
       <h1 class="h2 inverse shadow">Smooth Lounge</h1>
     </div>
 
-    <h2 class="h4">Elegant</h2>
 
-    <div class="wrapper single-playlist-wrapper wrapper-col">
 
-      <img src="../../playlists/smooth-lounge.png">
-      <p>Smooth Lounge features elegant and low-key sounds in a modern format, including styles such as soft house, R&amp;B, nu-jazz and slick soul.<br><br>The channel provides a sophisticated and laid back feel, combining the polished sounds and subdued woozy textures that appeal to globetrotters in hotel bars and restaurants. Trendy and stylish, Smooth Lounge expresses desire as well as introspection.</p>
+    <div class="wrapper wrapper-col single-playlist-section">
+        <h2 class="h4">Elegant</h2>
+        <p class="lead">Smooth Lounge features elegant and low-key sounds in a modern format, including styles such as soft house, R&amp;B, nu-jazz and slick soul.</p>
+        <figure class="card play-card on-light on-white">
+            <img src="../../playlists/smooth-lounge.png" class="single-playlist-img">
+            <figcaption>
+              <div class="playbutton play"></div>
+              <p class="sample hidden">play sample</p>
+            </figcaption>
+        </figure>
+        <p>The channel provides a sophisticated and laid back feel, combining the polished sounds and subdued woozy textures that appeal to globetrotters in hotel bars and restaurants. Trendy and stylish, Smooth Lounge expresses desire as well as introspection.</p>
       
       <p class="h5">
         
       </p>
       <div style="background-color: " class="lyric-filter">
+        <a href="#">
         <p></p>
+        </a>
       </div>
       <div style="height: 3rem"></div>
       <div class="row space-around">
@@ -50,8 +59,8 @@
         <a href="../../playlists/" class="button btn-stack">All</a>
         <a href="../../playlists/now-pop/" class="button btn-stack">Next</a>
       </div>
-
     </div>
+
 
 
 
@@ -71,6 +80,10 @@
   <p>
       @2019 Play More Music International Inc.
   </p>
+  <div class="social-links">
+    <i class="fab fa-2x fa-facebook-square social-icon"></i>
+    <i class="fab fa-2x fa-linkedin social-icon"></i>
+  </div>
 </footer>
 
 
