--- a/lyricsfilters/index.html
+++ b/lyricsfilters/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no shrink-to-fit=no">
-  <title>Tags</title>
+  <title>Lyrics Filters</title>
   <base href="">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   
@@ -27,13 +27,8 @@
  
 
 
-  <h1>Tags</h1>
 
-
-    <section>
-      
-    </section>
-
+<h3 id="lyrics-filters-explained">Lyrics Filters Explained</h3>
 
 
 
