--- a/playlists/jazz-classics/index.html
+++ b/playlists/jazz-classics/index.html
@@ -31,18 +31,27 @@
       <h1 class="h2 inverse shadow">Jazz Classics</h1>
     </div>
 
-    <h2 class="h4">Sophisticated</h2>
 
-    <div class="wrapper single-playlist-wrapper wrapper-col">
 
-      <img src="../../playlists/jazz-classics.png">
-      <p>These are some beautiful live recorded jazz tracks, playfully romantic and tailored to provide a magical dinnertime ambiance.<br><br>optional</p>
+    <div class="wrapper wrapper-col single-playlist-section">
+        <h2 class="h4">Sophisticated</h2>
+        <p class="lead">These are some beautiful live recorded jazz tracks, playfully romantic and tailored to provide a magical dinnertime ambiance.</p>
+        <figure class="card play-card on-light on-white">
+            <img src="../../playlists/jazz-classics.png" class="single-playlist-img">
+            <figcaption>
+              <div class="playbutton play"></div>
+              <p class="sample hidden">play sample</p>
+            </figcaption>
+        </figure>
+        <p>optional description, optional description,optional description, Curabitur ut cursus.</p>
       
       <p class="h5">
         
       </p>
       <div style="background-color: " class="lyric-filter">
+        <a href="#">
         <p></p>
+        </a>
       </div>
       <div style="height: 3rem"></div>
       <div class="row space-around">
@@ -50,8 +59,8 @@
         <a href="../../playlists/" class="button btn-stack">All</a>
         <a href="../../playlists/acoustic-dream/" class="button btn-stack">Next</a>
       </div>
-
     </div>
+
 
 
 
@@ -71,6 +80,10 @@
   <p>
       @2019 Play More Music International Inc.
   </p>
+  <div class="social-links">
+    <i class="fab fa-2x fa-facebook-square social-icon"></i>
+    <i class="fab fa-2x fa-linkedin social-icon"></i>
+  </div>
 </footer>
 
 
