--- a/playlists/ritmo-caliente/index.html
+++ b/playlists/ritmo-caliente/index.html
@@ -31,18 +31,27 @@
       <h1 class="h2 inverse shadow">Ritmo Caliente</h1>
     </div>
 
-    <h2 class="h4">Latin Contemporary and Top 40</h2>
 
-    <div class="wrapper single-playlist-wrapper wrapper-col">
 
-      <img src="../../playlists/ritmo-caliente.png">
-      <p>The fusion of today&#39;s biggest pop performers with the best of English language and Spanish language songs. A culture-inclusive mix of what is happening in music today.<br><br>optional</p>
-      <p class="artist-list">Includes Artists: Justin Bieber, Daddy Yankee, Fifth Harmony, Nicky Jam</p>
+    <div class="wrapper wrapper-col single-playlist-section">
+        <h2 class="h4">Latin Contemporary and Top 40</h2>
+        <p class="lead">The fusion of today&#39;s biggest pop performers with the best of English language and Spanish language songs. A culture-inclusive mix of what is happening in music today.</p>
+        <figure class="card play-card on-light on-white">
+            <img src="../../playlists/ritmo-caliente.png" class="single-playlist-img">
+            <figcaption>
+              <div class="playbutton play"></div>
+              <p class="sample hidden">play sample</p>
+            </figcaption>
+        </figure>
+        <p>optional description, optional description,optional description, Curabitur ut cursus.</p>
+      <p class="artist-list h6">Includes Artists: Justin Bieber, Daddy Yankee, Fifth Harmony, Nicky Jam</p>
       <p class="h5">
         Plan: Premium 
       </p>
       <div style="background-color: orange" class="lyric-filter">
+        <a href="#">
         <p>Lyrics Filter: orange</p>
+        </a>
       </div>
       <div style="height: 3rem"></div>
       <div class="row space-around">
@@ -50,8 +59,8 @@
         <a href="../../playlists/" class="button btn-stack">All</a>
         <a href="../../playlists/star-stage/" class="button btn-stack">Next</a>
       </div>
-
     </div>
+
 
 
 
@@ -71,6 +80,10 @@
   <p>
       @2019 Play More Music International Inc.
   </p>
+  <div class="social-links">
+    <i class="fab fa-2x fa-facebook-square social-icon"></i>
+    <i class="fab fa-2x fa-linkedin social-icon"></i>
+  </div>
 </footer>
 
 
