added an optional featured brand logo section to the front page

--- a/index.html
+++ b/index.html
@@ -213,8 +213,23 @@
 
   </div>
 
+  <div class="featured-brands">
+    <div class="wrapper center">
+      <h3>Top Brands use PlayMore Music for their Legal Business Music Solution</h3>
+        <p>optional section, not sure if appropriate. I think a slider is overkill for this: the only slider should be for the featured playlists to draw attention there. I think six relevant brands here, if used at all.</p>
+          <div class="wrapper center row space-around">
+  <img class="featured-brand-img" src="images/burger_king.png">
+  <img class="featured-brand-img" src="images/jimmy_choo.png">
+  <img class="featured-brand-img" src="images/mac.png">
+  <img class="featured-brand-img" src="images/mazda.png">
+  <img class="featured-brand-img" src="images/westin.png">
+</div>
 
-    <div class="wrapper center mb-30">
+      </div>
+  </div>
+
+
+    <div class="wrapper center">
     <h2 class="h3">Ultra Secure Hardware Available</h2>
     <p>
       Playmore Music provides an excellent, easy and legal business music solution that can be linked to your existing hardware or business music delivery platform. However, our CUBE hardware offers some compelling advantages if you are looking for an ultimately secure and reliable business music player.
@@ -254,7 +269,7 @@
     Phone: +1 (855) 698-2333 toll free
   </p>
   <p>
-      @2019 Play More Music International Inc.
+      &copy 2018 Play More Music International Inc.
   </p>
   <div class="social-links">
     <i class="fab fa-2x fa-facebook-square social-icon"></i>
