--- a/playlists/index.html
+++ b/playlists/index.html
@@ -247,7 +247,7 @@
     Phone: +1 (855) 698-2333 toll free
   </p>
   <p>
-      @2019 Play More Music International Inc.
+      &copy 2018 Play More Music International Inc.
   </p>
   <div class="social-links">
     <i class="fab fa-2x fa-facebook-square social-icon"></i>
