made brand logo images tiny

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <i class="navtoggle fas fa-bars hidden" id="navToggle"></i>
 <a class="navbar-brand" href="./">Playmore Music</a>
 <ul class="navigation hide-small" id="navExpand">
+  <a class="choose-country" href="#"><img class="country-flag" src="images/usa-flag-icon-32.png"></a>
+  <a class="choose-country" href="#"><img class="country-flag" src="images/canada-flag-icon-32.png"></a>
   <li><a href="./">Home</li><li><a class="" href="./pricing/">Plans and Pricing</a></li><li><a class="" href="./playlists/">Playlists</a></li></ul>
 </nav>
 
@@ -216,7 +218,7 @@
   <div class="featured-brands">
     <div class="wrapper center">
       <h3>Top Brands use PlayMore Music for their Legal Business Music Solution</h3>
-        <p>optional section, not sure if appropriate. I think a slider is overkill for this: the only slider should be for the featured playlists to draw attention there. I think six relevant brands here, if used at all.</p>
+        <p>optional section, not sure if appropriate. I think a slider is overkill for this: the only slider should be for the featured playlists to draw attention there. I think only five or six relevant brands here, if used at all.</p>
           <div class="wrapper center row space-around">
   <img class="featured-brand-img" src="images/burger_king.png">
   <img class="featured-brand-img" src="images/jimmy_choo.png">
