adds lyric filters page

--- a/playlists/jazz-classics/index.html
+++ b/playlists/jazz-classics/index.html
@@ -50,12 +50,12 @@
         
       </p>
       <div style="background-color: " class="lyric-filter">
-        <a href="#">
+        
+        <a href="../../lyric-filters/">
         <p></p>
         </a>
       </div>
-      <div style="height: 3rem"></div>
-      <div class="row space-around">
+      <div class="row mt-30 space-around">
         <a href="../../playlists/indie-days/" class="button btn-stack">Previous</a>
         <a href="../../playlists/" class="button btn-stack">All</a>
         <a href="../../playlists/acoustic-dream/" class="button btn-stack">Next</a>
