--- a/playlists/mega-jamz/index.html
+++ b/playlists/mega-jamz/index.html
@@ -50,12 +50,12 @@
         Plan: Premium 
       </p>
       <div style="background-color: orange" class="lyric-filter">
-        <a href="#">
-        <p>Lyrics Filter: orange</p>
+        
+        <a href="../../lyric-filters/">
+        <p>Lyric Filter: orange</p>
         </a>
       </div>
-      <div style="height: 3rem"></div>
-      <div class="row space-around">
+      <div class="row mt-30 space-around">
         <a href="../../playlists/now-pop/" class="button btn-stack">Previous</a>
         <a href="../../playlists/" class="button btn-stack">All</a>
         <a href="../../playlists/top-beats/" class="button btn-stack">Next</a>
