adds first draft content to home page

--- a/playlists/index.html
+++ b/playlists/index.html
@@ -27,7 +27,9 @@
 
  
 
-<h1>Playlists</h1>
+<div class="jumbo-title">
+  <h1 class="h2 inverse shadow">Playlists</h1>
+</div>
 
 <section class="wrapper">
   <p class="lead text-center">View our comprehensive selection of legal business music, from starter playlists through to premium licensed music for your business. (SEO friendly description here, not too long, the user shouldn&#39;t have to read too much here.) This can also be the meta description for SEO, or doesn&#39;t have to be.</p>
