--- a/pricing/index.html
+++ b/pricing/index.html
@@ -27,7 +27,9 @@
 
  
 
-<h1>Plans and Pricing</h1>
+<div class="jumbo-title">
+  <h1 class="h2 inverse shadow">Plans and Pricing</h1>
+</div>
 
 <section class="wrapper">
     <p class="lead text-center">We could have a short descriptive sentence or two here, also part of meta SEO or not. Not too much reading for the user here, but short intro might be friendly.</p>
@@ -41,7 +43,7 @@
                 <h2 class="h3">Starter</h2>
                 <div class="card-details">
                   <h3>$8.99/month</h3>
-                  <p>Get your business-legal music up and running with a selection of non label music and limited playlists.</p>
+                  <p>Small business budget? No problem! This solutions gives you access to legal background music that will keep your customers coming back.</p>
                 </div>
                 <center class="align-end mb-30">
                   <a class="button" href="../pricing/starter">Details</a>
@@ -56,7 +58,7 @@
                 <h2 class="h3">Premium</h2>
                 <div class="card-details">
                   <h3>$18.99/month</h3>
-                  <p>Get all the benefits of our licensed business music solution. Select from a large range of playlists, get streaming solutions and more.</p>
+                  <p>For a little more you get all teh benefits or four licensed business music solution. Select from a large range of playlists, get streaming solutions and more.</p>
                 </div>
                 <center class="align-end mb-30">
                   <a class="button" href="../pricing/premium">Details</a>
@@ -71,7 +73,7 @@
                 <h2 class="h3">CUBE Physical Player</h2>
                 <div class="card-details">
                   <h3>$199 once-off</h3>
-                  <p>An optional CUBE player for your business music will provide you with superior security and reliability across the board.</p>
+                  <p>Although you can use your plan with the hardware you already own, upgrading to a CUBE player for your business music will provide you with superior security and reliability across the board.</p>
                 </div>
                 <center class="align-end mb-30">
                   <a class="button" href="../pricing/cube-player">Details</a>
