adds new playlist names and descriptions for draft content so far. adjusts responsive styles for playlist cards. adds interaction to play-pause buttons and uses font awesome icons for that

--- a/playlists/chart-toppers/index.html
+++ b/playlists/chart-toppers/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no shrink-to-fit=no">
-  <title>Top Beats</title>
+  <title>Chart Toppers</title>
   <base href="">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   
@@ -29,23 +29,24 @@
 
   
     <div class="jumbo-title">
-      <h1 class="h2 inverse shadow">Top Beats</h1>
+      <h1 class="h2 inverse shadow">Chart Toppers</h1>
     </div>
 
 
 
     <div class="wrapper wrapper-col single-playlist-section">
-        <h2 class="h4">Dance and Top 40</h2>
-        <p class="lead">Chart-topping pop hits of today along with the fresh beats of the best dance tracks. New, now and full of energy.</p>
+        <h2 class="h4">The most wanted in 20-teen music</h2>
+        <p class="lead text-center">If you&#39;ve heard it on the radio or the Internet - it&#39;s on this list. This playlist plays host to only the most listened, downloaded and all-around popular music of today - an appealing choice for most customers.</p>
         <figure class="card play-card on-light on-white">
-            <img src="../../playlists/top-beats.png" class="single-playlist-img">
+            <img src="../../playlists/chart-toppers.png" class="single-playlist-img">
             <figcaption>
-              <div class="playbutton play"></div>
+              
+              <center><i class="fas fa-play play"></i></center>
               <p class="sample hidden">play sample</p>
             </figcaption>
         </figure>
-        <p>optional description, optional description,optional description, Curabitur ut cursus.</p>
-      <p class="artist-list h6">Includes Artists: Chainsmokers, Justin Bieber, Kaskade, Ariana Grande, Seven Lions, The Weeknd, Kygo</p>
+        <p></p>
+      <p class="artist-list h6">Includes Artists: Sam Smith, Mark Ronson, Ed Sheeran, Nick Jonas, Maroon 5, Fall Out Boy, Kelly Clarkson, Hozier, Meghan Trainor</p>
       <p class="h5">
         Plan: Premium 
       </p>
@@ -56,9 +57,9 @@
         </a>
       </div>
       <div class="row mt-30 space-around">
-        <a href="../../playlists/mega-jamz/" class="button btn-stack">Previous</a>
+        <a href="../../playlists/hit-tracks/" class="button btn-stack">Previous</a>
         <a href="../../playlists/" class="button btn-stack">All</a>
-        <a href="../../playlists/mass-appeal/" class="button btn-stack">Next</a>
+        <a href="../../playlists/throwbacks-and-favs/" class="button btn-stack">Next</a>
       </div>
     </div>
 
