--- a/playlists/musica-esencial/index.html
+++ b/playlists/musica-esencial/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no shrink-to-fit=no">
-  <title>Star Stage</title>
+  <title>Musica Esencial</title>
   <base href="">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   
@@ -29,23 +29,24 @@
 
   
     <div class="jumbo-title">
-      <h1 class="h2 inverse shadow">Star Stage</h1>
+      <h1 class="h2 inverse shadow">Musica Esencial</h1>
     </div>
 
 
 
     <div class="wrapper wrapper-col single-playlist-section">
-        <h2 class="h4">Alternative and Top 40</h2>
-        <p class="lead">Today&#39;s alternative and Indie stars join today&#39;s pop chart-toppers, all in one playlist. It&#39;s the best of both worlds.</p>
+        <h2 class="h4">Contemporary and Hits from Latin America</h2>
+        <p class="lead text-center">This list combines some of the top English-language hits with the fast-growing popularity of Spanish-language chart toppers. This playlist will appeal to a large audience of those who love today&#39;s hits.</p>
         <figure class="card play-card on-light on-white">
-            <img src="../../playlists/star-stage.png" class="single-playlist-img">
+            <img src="../../playlists/musica-esencial.png" class="single-playlist-img">
             <figcaption>
-              <div class="playbutton play"></div>
+              
+              <center><i class="fas fa-play play"></i></center>
               <p class="sample hidden">play sample</p>
             </figcaption>
         </figure>
-        <p>optional description, optional description,optional description, Curabitur ut cursus.</p>
-      <p class="artist-list h6">Includes Artists: Fitz and the Tantrums, Twenty One Pilots, Chvrches, Ariana Grande, Justin Bieber, Beyonce</p>
+        <p></p>
+      <p class="artist-list h6">Includes Artists: Justin Bieber, Daddy Yankee, Fifth Harmony, Nicky Jam</p>
       <p class="h5">
         Plan: Premium 
       </p>
@@ -56,9 +57,9 @@
         </a>
       </div>
       <div class="row mt-30 space-around">
-        <a href="../../playlists/ritmo-caliente/" class="button btn-stack">Previous</a>
+        <a href="../../playlists/throwbacks-and-favs/" class="button btn-stack">Previous</a>
         <a href="../../playlists/" class="button btn-stack">All</a>
-        <a href="../../playlists/the-mix/" class="button btn-stack">Next</a>
+        <a href="../../playlists/radio-mix/" class="button btn-stack">Next</a>
       </div>
     </div>
 
