--- a/playlists/hit-tracks/index.html
+++ b/playlists/hit-tracks/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no shrink-to-fit=no">
-  <title>Ritmo Caliente</title>
+  <title>Hit Tracks</title>
   <base href="">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   
@@ -29,23 +29,24 @@
 
   
     <div class="jumbo-title">
-      <h1 class="h2 inverse shadow">Ritmo Caliente</h1>
+      <h1 class="h2 inverse shadow">Hit Tracks</h1>
     </div>
 
 
 
     <div class="wrapper wrapper-col single-playlist-section">
-        <h2 class="h4">Latin Contemporary and Top 40</h2>
-        <p class="lead">The fusion of today&#39;s biggest pop performers with the best of English language and Spanish language songs. A culture-inclusive mix of what is happening in music today.</p>
+        <h2 class="h4">Dance and Top 40</h2>
+        <p class="lead text-center">Your customers might bop to the beat or wiggle to the sound with this dance track playlist. It combines the ever-popular chart toppers with some of the freshest music we&#39;d all like to move to.</p>
         <figure class="card play-card on-light on-white">
-            <img src="../../playlists/ritmo-caliente.png" class="single-playlist-img">
+            <img src="../../playlists/hit-tracks.png" class="single-playlist-img">
             <figcaption>
-              <div class="playbutton play"></div>
+              
+              <center><i class="fas fa-play play"></i></center>
               <p class="sample hidden">play sample</p>
             </figcaption>
         </figure>
-        <p>optional description, optional description,optional description, Curabitur ut cursus.</p>
-      <p class="artist-list h6">Includes Artists: Justin Bieber, Daddy Yankee, Fifth Harmony, Nicky Jam</p>
+        <p></p>
+      <p class="artist-list h6">Includes Artists: Chainsmokers, Justin Bieber, Kaskade, Ariana Grande, Seven Lions, The Weeknd, Kygo</p>
       <p class="h5">
         Plan: Premium 
       </p>
@@ -56,9 +57,9 @@
         </a>
       </div>
       <div class="row mt-30 space-around">
-        <a href="../../playlists/my-favorite-hits/" class="button btn-stack">Previous</a>
+        <a href="../../playlists/turntable-numbers/" class="button btn-stack">Previous</a>
         <a href="../../playlists/" class="button btn-stack">All</a>
-        <a href="../../playlists/star-stage/" class="button btn-stack">Next</a>
+        <a href="../../playlists/chart-toppers/" class="button btn-stack">Next</a>
       </div>
     </div>
 
