--- a/playlists/yesterdays-hits/index.html
+++ b/playlists/yesterdays-hits/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no shrink-to-fit=no">
-  <title>Mega Jamz</title>
+  <title>Yesterday&#39;s Hits</title>
   <base href="">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   
@@ -29,23 +29,24 @@
 
   
     <div class="jumbo-title">
-      <h1 class="h2 inverse shadow">Mega Jamz</h1>
+      <h1 class="h2 inverse shadow">Yesterday&#39;s Hits</h1>
     </div>
 
 
 
     <div class="wrapper wrapper-col single-playlist-section">
-        <h2 class="h4">Top 40 and Urban Contemporary</h2>
-        <p class="lead">This is where pop meets the street beat. Today&#39;s biggest pop hits along with today&#39;s urban hits, combined for a power playlist of hits for those needing an urban accent to their retail environment.</p>
+        <h2 class="h4">The greatest music hits</h2>
+        <p class="lead text-center">A collection of hit music from the 90&#39;s, early 2000&#39;s and some picks from today. This playlist resonates with everyone between 18 and 54 - it&#39;s a stellar collection of some prime pop hits.</p>
         <figure class="card play-card on-light on-white">
-            <img src="../../playlists/mega-jamz.png" class="single-playlist-img">
+            <img src="../../playlists/yesterdays-hits.png" class="single-playlist-img">
             <figcaption>
-              <div class="playbutton play"></div>
+              
+              <center><i class="fas fa-play play"></i></center>
               <p class="sample hidden">play sample</p>
             </figcaption>
         </figure>
-        <p>optional description, optional description,optional description, Curabitur ut cursus.</p>
-      <p class="artist-list h6">Includes Artists: The Weeknd, Flo Rida, Kanye West, Rihanna</p>
+        <p></p>
+      <p class="artist-list h6">Includes Artists: Ariana Grande, Michael Buble, Lady Gaga</p>
       <p class="h5">
         Plan: Premium 
       </p>
@@ -56,9 +57,9 @@
         </a>
       </div>
       <div class="row mt-30 space-around">
-        <a href="../../playlists/now-pop/" class="button btn-stack">Previous</a>
+        <a href="../../playlists/radio-mix/" class="button btn-stack">Previous</a>
         <a href="../../playlists/" class="button btn-stack">All</a>
-        <a href="../../playlists/top-beats/" class="button btn-stack">Next</a>
+        <a href="" class="button btn-stack">Next</a>
       </div>
     </div>
 
