adds more responsiveness to playlist card stizing

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <img src="playlists/musica-esencial.png">
             <figcaption>
               <h2 class="h6">Musica Esencial</h2>
-              <p>Contemporary and Hits from Latin America</p>
+              <p>Contemporary &amp; Hits from Latin America</p>
               <center> <i class="fas fa-3x fa-ellipsis-h"></i></center>
             </figcaption>
             </a>
