--- a/playlists/index.html
+++ b/playlists/index.html
@@ -43,7 +43,7 @@
               <figcaption>
                 <h2 class="h5">Acoustic Edge</h2>
                 <p>For that boho hipster vibe</p>
-              <center> <i class="fas fa-3x fa-ellipsis-h"></i></center>
+                <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
               </figcaption>
             </figure>
             </a>
@@ -59,7 +59,7 @@
               <figcaption>
                 <h2 class="h5">Chart Toppers</h2>
                 <p>The most wanted in 20-teen music</p>
-              <center> <i class="fas fa-3x fa-ellipsis-h"></i></center>
+                <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
               </figcaption>
             </figure>
             </a>
@@ -75,7 +75,7 @@
               <figcaption>
                 <h2 class="h5">Hit Tracks</h2>
                 <p>Dance and Top 40</p>
-              <center> <i class="fas fa-3x fa-ellipsis-h"></i></center>
+                <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
               </figcaption>
             </figure>
             </a>
@@ -89,7 +89,7 @@
               <figcaption>
                 <h2 class="h5">Indie City</h2>
                 <p>A step above the rest</p>
-              <center> <i class="fas fa-3x fa-ellipsis-h"></i></center>
+                <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
               </figcaption>
             </figure>
             </a>
@@ -103,7 +103,7 @@
               <figcaption>
                 <h2 class="h5">Jazz Hot Plates</h2>
                 <p>Iconic Jam Sessions</p>
-              <center> <i class="fas fa-3x fa-ellipsis-h"></i></center>
+                <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
               </figcaption>
             </figure>
             </a>
@@ -117,7 +117,7 @@
               <figcaption>
                 <h2 class="h5">Lounge Sophistication</h2>
                 <p>A touch of class</p>
-              <center> <i class="fas fa-3x fa-ellipsis-h"></i></center>
+                <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
               </figcaption>
             </figure>
             </a>
@@ -132,8 +132,8 @@
               <img src="../playlists/musica-esencial.png">
               <figcaption>
                 <h2 class="h5">Musica Esencial</h2>
-                <p>Contemporary and Hits from Latin America</p>
-              <center> <i class="fas fa-3x fa-ellipsis-h"></i></center>
+                <p>Contemporary &amp; Hits from Latin America</p>
+                <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
               </figcaption>
             </figure>
             </a>
@@ -147,7 +147,7 @@
               <figcaption>
                 <h2 class="h5">Paced Pop</h2>
                 <p>It&#39;s as popular as can be</p>
-              <center> <i class="fas fa-3x fa-ellipsis-h"></i></center>
+                <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
               </figcaption>
             </figure>
             </a>
@@ -163,7 +163,7 @@
               <figcaption>
                 <h2 class="h5">Radio Mix</h2>
                 <p>Alternative and Top 40</p>
-              <center> <i class="fas fa-3x fa-ellipsis-h"></i></center>
+                <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
               </figcaption>
             </figure>
             </a>
@@ -179,7 +179,7 @@
               <figcaption>
                 <h2 class="h5">Throwbacks and Favs</h2>
                 <p>Contemporary Adult Listening</p>
-              <center> <i class="fas fa-3x fa-ellipsis-h"></i></center>
+                <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
               </figcaption>
             </figure>
             </a>
@@ -195,7 +195,7 @@
               <figcaption>
                 <h2 class="h5">Turntable Numbers</h2>
                 <p>Pop and RnB</p>
-              <center> <i class="fas fa-3x fa-ellipsis-h"></i></center>
+                <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
               </figcaption>
             </figure>
             </a>
@@ -211,7 +211,7 @@
               <figcaption>
                 <h2 class="h5">Yesterday&#39;s Hits</h2>
                 <p>The greatest music hits</p>
-              <center> <i class="fas fa-3x fa-ellipsis-h"></i></center>
+                <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
               </figcaption>
             </figure>
             </a>
