--- a/playlists/musica-esencial/index.html
+++ b/playlists/musica-esencial/index.html
@@ -35,7 +35,7 @@
 
 
     <div class="wrapper wrapper-col single-playlist-section">
-        <h2 class="h4">Contemporary and Hits from Latin America</h2>
+        <h2 class="h4">Contemporary &amp; Hits from Latin America</h2>
         <p class="lead text-center">This list combines some of the top English-language hits with the fast-growing popularity of Spanish-language chart toppers. This playlist will appeal to a large audience of those who love today&#39;s hits.</p>
         <figure class="card play-card on-light on-white">
             <img src="../../playlists/musica-esencial.png" class="single-playlist-img">
