centers optional description below photo on single playlist pages

--- a/playlists/acoustic-edge/index.html
+++ b/playlists/acoustic-edge/index.html
@@ -45,7 +45,7 @@
               <p class="sample hidden">play sample</p>
             </figcaption>
         </figure>
-        <p>Somewhere between boho lifestyle and folksy living, this playlist envokes mellow vibes. With its soft crooning and beautiful guitar music, it makes for perfect browsing listening and peaceful background tunes.</p>
+        <p class="text-center">Somewhere between boho lifestyle and folksy living, this playlist envokes mellow vibes. With its soft crooning and beautiful guitar music, it makes for perfect browsing listening and peaceful background tunes.</p>
       
       <p class="h5">
         
