--- a/playlists/chart-toppers/index.html
+++ b/playlists/chart-toppers/index.html
@@ -45,7 +45,7 @@
               <p class="sample hidden">play sample</p>
             </figcaption>
         </figure>
-        <p></p>
+        <p class="text-center"></p>
       <p class="artist-list h6">Includes Artists: Sam Smith, Mark Ronson, Ed Sheeran, Nick Jonas, Maroon 5, Fall Out Boy, Kelly Clarkson, Hozier, Meghan Trainor</p>
       <p class="h5">
         Plan: Premium 
