--- a/playlists/hit-tracks/index.html
+++ b/playlists/hit-tracks/index.html
@@ -45,7 +45,7 @@
               <p class="sample hidden">play sample</p>
             </figcaption>
         </figure>
-        <p></p>
+        <p class="text-center"></p>
       <p class="artist-list h6">Includes Artists: Chainsmokers, Justin Bieber, Kaskade, Ariana Grande, Seven Lions, The Weeknd, Kygo</p>
       <p class="h5">
         Plan: Premium 
