--- a/playlists/lounge-sophistication/index.html
+++ b/playlists/lounge-sophistication/index.html
@@ -45,7 +45,7 @@
               <p class="sample hidden">play sample</p>
             </figcaption>
         </figure>
-        <p>The channel provides a sophisticated and laid back feel, combining the polished sounds and subdued woozy textures that appeal to globetrotters in hotel bars and restaurants. Trendy and stylish, Lounge Sopthistication expresses desire as well as introspection.</p>
+        <p class="text-center">The channel provides a sophisticated and laid back feel, combining the polished sounds and subdued woozy textures that appeal to globetrotters in hotel bars and restaurants. Trendy and stylish, Lounge Sopthistication expresses desire as well as introspection.</p>
       
       <p class="h5">
         
