--- a/playlists/jazz-hot-plates/index.html
+++ b/playlists/jazz-hot-plates/index.html
@@ -45,7 +45,7 @@
               <p class="sample hidden">play sample</p>
             </figcaption>
         </figure>
-        <p></p>
+        <p class="text-center"></p>
       
       <p class="h5">
         
