--- a/playlists/radio-mix/index.html
+++ b/playlists/radio-mix/index.html
@@ -45,7 +45,7 @@
               <p class="sample hidden">play sample</p>
             </figcaption>
         </figure>
-        <p></p>
+        <p class="text-center"></p>
       <p class="artist-list h6">Includes Artists: Fitz and the Tantrums, Twenty One Pilots, Chvrches, Ariana Grande, Justin Bieber, Beyonce</p>
       <p class="h5">
         Plan: Premium 
