--- a/playlists/turntable-numbers/index.html
+++ b/playlists/turntable-numbers/index.html
@@ -45,7 +45,7 @@
               <p class="sample hidden">play sample</p>
             </figcaption>
         </figure>
-        <p></p>
+        <p class="text-center"></p>
       <p class="artist-list h6">Includes Artists: The Weeknd, Flo Rida, Kanye West, Rihanna</p>
       <p class="h5">
         Plan: Premium 
