--- a/playlists/yesterdays-hits/index.html
+++ b/playlists/yesterdays-hits/index.html
@@ -45,7 +45,7 @@
               <p class="sample hidden">play sample</p>
             </figcaption>
         </figure>
-        <p></p>
+        <p class="text-center"></p>
       <p class="artist-list h6">Includes Artists: Ariana Grande, Michael Buble, Lady Gaga</p>
       <p class="h5">
         Plan: Premium 
